--- a/style.css
+++ b/style.css
@@ -46,6 +46,10 @@ body {
     text-align: center;
 }
 
+.text-area button {
+    cursor: pointer !important;
+}
+
 .text-area h2 {
     font-size: 40px;
     font-weight: 700;
@@ -91,7 +95,7 @@ body {
 
 .text h2 {
     font-weight: 800;
-    font-size: 40px;
+    font-size: 35px;
     letter-spacing: 6px;
     color: #fff;
 
@@ -210,7 +214,7 @@ body {
 /*---------------------------slillls---------------------------*/
 .middle-skill {
 
-    background-color: #fff;
+    background-color: #d7caca;
     padding: 80px 0px;
 }
 
@@ -241,9 +245,92 @@ body {
     color: #17c1a4;
 }
 
+/*------------------------------------- WHAT POEPLE SAY ABOUT US-------------------------------- */
+
+.last-section {
+    background-color: #d6477f;
+}
+
+/* -------------footer area --------------*/
+.footer-area {
+    background: #3d549a;
+}
+
+.cool {
+    width: 50%;
+    position: relative;
+}
+
+
+
+.cool input {
+    width: 100%;
+    padding: 12px;
+    background: #263971;
+    border: none;
+}
+
+
+
+.cool label {
+    position: absolute;
+    top: 10px;
+    left: 26%;
+}
+
+
+
+.cool label span {
+    color: red;
+}
+
+.coool {
+    width: 100%;
+    position: relative;
+}
+
+.coool textarea {
+    width: 100%;
+    padding: 8px;
+    background: #263971;
+    border: none;
+
+}
+
+.coool label {
+    position: absolute;
+    top: 10px;
+    left: 15%;
+}
+
+.coool label span {
+    color: red;
+}
+
+.border-none {
+    border: none;
+    border-radius: 6px;
+}
+
+.backgrounddd {
+    background-color: #263971;
+}
+
+h2 {
+    color: #fff !important;
+}
+
+p {
+    color: #fff !important;
+}
+
 /*---------------------------------------------------- responsive------------------------------- */
 @media(max-width:593px) {
-
+    .nav-link {
+        padding: 5px 7px;
+        border-radius: 10px;
+        color: #FFF;
+    }
 
     .text-area {
         width: 100%;
